--- a/README
+++ b/README
@@ -1,2 +1,25 @@
 
-this  is a test
+
+
+
+Global setup:
+  Download and install Git
+  git config --global user.name "Your Name"
+  git config --global user.email name@126.com
+        Next steps:
+  mkdir frame
+  cd frame
+  git init
+  touch README
+  git add README
+  git commit -m 'first commit'
+  git remote add origin git@github.com:axgle/frame.git
+  git push origin master
+      Existing Git Repo?
+  cd existing_git_repo
+  git remote add origin git@github.com:axgle/frame.git
+  git push origin master
+      Importing a SVN Repo?
+  Click here
+      When you're done:
+  Continue
